welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:44: error: expected class or object definition
def brosse(){
^PatternPicture:49: error: Unmatched closing brace '}' ignored here
}
^